force-app/main/default/objects/ActivacionCuenta__c/ActivacionCuenta__c.object-meta.xml
<CustomObject>
    <description>Son los campos necesarios para realizar una activacion correcta de cuentas.</description>
    <label>ActivacionCuenta</label>
    <nameField>
        <label>Nombre de ActivacionCuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActivacionesCuentas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>