force-app/main/default/objects/ActivacionCuenta__c/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <description>Mostrará el asesor relacionado con la cuenta.</description>
    <inlineHelpText>Nombre del asesor</inlineHelpText>
    <label>Asesor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>