force-app/main/default/objects/ActivacionCuenta__c/fields/Causa__c.field-meta.xml
<CustomField>
    <fullName>Causa__c</fullName>
    <description>Porque va a cambiar el estado de la cuenta.</description>
    <inlineHelpText>Porque va activar o porque va a inactivar el estado de la cuenta.</inlineHelpText>
    <label>Causa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>