force-app/main/default/objects/ActivacionCuenta__c/fields/CausaNuevo__c.field-meta.xml
<CustomField>
    <fullName>CausaNuevo__c</fullName>
    <description>Causa del estado nuevo de la cuenta.</description>
    <inlineHelpText>Explica el estado nuevo de la cuenta.</inlineHelpText>
    <label>CausaNuevo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>