force-app/main/default/objects/ActivacionCuenta__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <description>Mostrará el nombre del cliente.</description>
    <inlineHelpText>Nombre del cliente.</inlineHelpText>
    <label>Cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>