force-app/main/default/objects/ActivacionCuenta__c/fields/DescripA__c.field-meta.xml
<CustomField>
    <fullName>DescripA__c</fullName>
    <label>DescripA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>