force-app/main/default/objects/ActivacionCuenta__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <description>Mostrará el nombre de la empresa.</description>
    <inlineHelpText>Nombre de la empresa.</inlineHelpText>
    <label>Empresa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>