force-app/main/default/objects/ActivacionCuenta__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Tendrá los diferentes estado que va tener el documento.</description>
    <inlineHelpText>Tendrá los diferentes estado que va tener el documento.</inlineHelpText>
    <label>Estado</label>
    <length>8</length>
    <type>Text</type>
</CustomField>