force-app/main/default/objects/ActivacionCuenta__c/fields/EstadoActual__c.field-meta.xml
<CustomField>
    <fullName>EstadoActual__c</fullName>
    <description>Muestra si el estado de cuenta está activa o inactiva.</description>
    <inlineHelpText>A si está activa y I si está inactiva.</inlineHelpText>
    <label>EstadoActual</label>
    <length>2</length>
    <type>Text</type>
</CustomField>