force-app/main/default/objects/ActivacionCuenta__c/fields/EstadoNuevo__c.field-meta.xml
<CustomField>
    <fullName>EstadoNuevo__c</fullName>
    <description>El estado nuevo de la cuenta.</description>
    <inlineHelpText>Ver si el estado nuevo está Activo o Inactivo.</inlineHelpText>
    <label>EstadoNuevo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>