force-app/main/default/objects/ActivacionCuenta__c/fields/Fecha_CargaA__c.field-meta.xml
<CustomField>
    <fullName>Fecha_CargaA__c</fullName>
    <label>Fecha_CargaA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>