force-app/main/default/objects/ActivacionCuenta__c/fields/Identificador_CargaA__c.field-meta.xml
<CustomField>
    <fullName>Identificador_CargaA__c</fullName>
    <label>Identificador_CargaA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>