force-app/main/default/objects/ActivacionCuenta__c/fields/NoCuenta__c.field-meta.xml
<CustomField>
    <fullName>NoCuenta__c</fullName>
    <description>El usuario introducira los numeros de cuenta previamente autorizado a activacion.</description>
    <inlineHelpText>Numero de cuenta.</inlineHelpText>
    <label>noCuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>