force-app/main/default/objects/ActivacionCuenta__c/fields/noIdentidad__c.field-meta.xml
<CustomField>
    <fullName>noIdentidad__c</fullName>
    <description>Identificación del cliente.</description>
    <inlineHelpText>noIdentidad</inlineHelpText>
    <label>noIdentidad</label>
    <length>16</length>
    <type>Text</type>
</CustomField>