force-app/main/default/objects/ActivacionCuenta__c/fields/Situaci_n__c.field-meta.xml
<CustomField>
    <fullName>Situaci_n__c</fullName>
    <description>Mostrará si los datos cargados están correctos.</description>
    <inlineHelpText>Si sale OK está correcto, si sale NO COINCIDE hay un error.</inlineHelpText>
    <label>Situación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>