force-app/main/default/objects/ActivacionCuenta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Identificador_CargaA__c</columns>
    <columns>NoCuenta__c</columns>
    <columns>noIdentidad__c</columns>
    <columns>Usuario__c</columns>
    <columns>Estado__c</columns>
    <columns>Causa__c</columns>
    <columns>CausaNuevo__c</columns>
    <columns>EstadoActual__c</columns>
    <columns>EstadoNuevo__c</columns>
    <columns>Fecha_CargaA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NoCuenta__c</field>
        <operation>equals</operation>
        <value>78729</value>
    </filters>
    <label>Todos</label>
</ListView>